# jaleesbench

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.codev/: config.json
.github/workflows/: pages.yml
apps/jaleesbrowser/: CONTRACT.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
codev/plans/: 3-public-results-browser-side-by.md
codev/reviews/: 3-public-results-browser-side-by.md
codev/specs/: 3-public-results-browser-side-by.md
codev/state/: air-11_thread.md  air-1_thread.md  air-5_thread.md  air-9_thread.md  bugfix-7_thread.md  main.md  spir-3_thread.md
docs/: jaleesbench-authoring-standards.md  jaleesbench-chapter-map.md  jaleesbench-design.md  jaleesbench-guide.md  jaleesbench-pilot-probes.md  jaleesbench-pilot-report-template.md  jaleesbench-pilot-report.html  jaleesbench-pilot-report.md  jaleesbench-probe-bank.md  jaleesbench-probe-drafts.md  jaleesbench-report.html  jaleesbench-report.md  nemotron-virtuebench-baseline.md  taqwabench-design.md
jaleesbench/: README.md  judge_tune.py  pyproject.toml
jaleesbench/jaleesbench/: authoring.py  batching.py  citation.py  cli.py  collect.py  export_web.py  html_report.py  judge.py  mapping.py  paper_stats.py  probes.json  prompts.py  providers.py  score.py
jaleesbench/jaleesbench/data/: chapters.json  probes.json  probes_ar.json  prompts_ar.json  proof_texts.json
jaleesbench/results/: commentary.json  paper_stats.json
jaleesbench/tests/: conftest.py  test_cli_wiring.py  test_export_web.py  test_providers.py  test_seam.py  test_units.py
(+60 files in other folders)
