[project]
name = "jaleesbench"
version = "0.1.0"
description = "JaleesBench pilot harness — measuring whether an AI agent is a righteous companion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "typer>=0.12",
    "httpx>=0.27",
]

[project.scripts]
jaleesbench = "jaleesbench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jaleesbench"]
